@@ -1,6 +1,8 @@
 Version 0.5.1 -- Subversion
 -----------------
 
+* Added assume_mod_rewrite to config if using the .htaccess and mod_rewrite
+functionality
 * Fixed upgrade path from 0.2 through to 0.5
 * Fixed a bug with PATH_INFO
 * Fixed a bug with Call-time pass-by-reference Warning
